cmake_minimum_required ( VERSION 3.28 )

project ( testprj )

include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)

FetchContent_MakeAvailable(googletest)

FetchContent_GetProperties(googletest)

message( STATUS "googletest_POPULATED =  ${googletest_POPULATED}" )
